--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,7 +14,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.4",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "web-vitals": "^2.1.2"
@@ -53,11 +52,16 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.19",
-    "eslint": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.4.1"
+    "i": "^0.3.7",
+    "npm": "^8.3.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.5.4"
   }
 }
